--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@next/font": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/styled-components": "^5.1.26",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
-    "tailwindcss": "^3.2.7",
-    "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.9.5"
   }
 }
